scss/base/_sils.scss
@import '../vendor/foundation/_settings.scss';
@import '../vendor/foundation/components/_buttons.scss';
@import '../vendor/foundation/components/_forms.scss';
@import '../vendor/foundation/components/_labels.scss';

//hide drupal breadcrumbs
.breadcrumbs {
    display: none;
}

//
//Classes used by SILS Search Results
//


//container for and elements of  each rendered search result
.searchResultRow {
    @include grid-row();
}

.itemCoverArt {
    @include grid-columns(4,2,2);
}

._record_link > h4 {
    color: $primary-color;
    margin-bottom: -1px;
}

.formatIcon {
    @include label;
}

.itemSummary {
    @include grid-columns(8,10,10);
}


//Buttons
.holdButton {
    @include button;
}



.searchButton {
    @include prefix-postfix-base();
    @include postfix();
    @include button;
    margin-bottom: 1em;
    margin-top: 1em;
}

.sort_links {
    @include inline-list;
}

.resultauthor {
    margin-bottom: 3px;
    padding-bottom: 1px;
}

.resulttext {
    padding-top: 10px;
    margin-top: 10px;
}




//Styles for Bloodhound  Location Search Twitter-Typeahead
.tt-query,
.tt-hint {
    /*width: 396px;
    height: 30px;
    padding: 8px 12px;
    font-size: 24px;
    line-height: 30px;*/
    border: 2px solid #ccc;
    border-radius: 8px;
    outline: none;
}

.tt-query {
    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
}

.tt-hint {
    color: #999
}

.tt-dropdown-menu {
    width: 422px;
    margin-top: 12px;
    padding: 8px 0;
    background-color: #fff;
    border: 1px solid #ccc;
    border: 1px solid rgba(0, 0, 0, 0.2);
    border-radius: 8px;
    box-shadow: 0 5px 10px rgba(0,0,0,.2);
}

//.tt-dropdown-menu {
 //   @include dropdown-container();
  //  li { @include dropdown-style; }
//}



.tt-suggestion {
    padding: 3px 20px;
    font-size: 18px;
    line-height: 24px;
}

.tt-suggestion.tt-cursor { /* UPDATE: newer versions use .tt-suggestion.tt-cursor */
    color: #fff;
    background-color: $secondary-color;

}

.tt-suggestion p {
    margin: 0;
}

